# aura-core

./: README.md  main.py  pyproject.toml
agent/: agent.py  config.py  context.py  events.py  llm.py
config/: default.yaml  tools.yaml
interfaces/cli/: handler.py  interface.py  rich_handler.py  rich_interface.py
tools/: registry.py  scanner.py
tools/builtin/: web-search.py  web_search.py
