[project]
name = "aura-core"
version = "0.1.0"
description = "ReAct agentic loop with CLI interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.12.0",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
